--- a/src/config.json
+++ b/src/config.json
@@ -1,18 +1,18 @@
 {
     "ipfs": "https://ipfs.hivebp.io/ipfs/",
     "atomic_api": "https://wax.api.atomicassets.io",
-    "market_name": "dummymarket1",
-    "market_url": "https://waxdummymarket.com",
-    "default_collection": "official.wax",
+    "market_name": "remixworlds1",
+    "market_url": "https://wax.remixworlds.com",
+    "default_collection": "freecitygame",
     "api_endpoint": "https://api.hivebp.io",
-    "limit": 12,
+    "limit": 100,
     "drops_contract": "neftyblocksd",
     "packs_contracts": ["atomicpacksx", "neftyblocksp"],
-    "telegram_link": "https://t.me/wax_io",
-    "discord_link": "https/discord.com/invite/dJtPetMdfb",
-    "twitter_link": "https://twitter.com/waxio",
-    "instagram_link": "https/www.instagram.com/wax.nft/",
-    "market_title": "WAX Market Template",
-    "market_description": "WAX Market for Dummy Listings",
-    "market_image": "/wax.png"
+    "telegram_link": "https://t.me/remixworlds",
+    "discord_link": "",
+    "twitter_link": "",
+    "instagram_link": "",
+    "market_title": "Remix Worlds NFT WAX Gaming",
+    "market_description": "Remix Worlds NFT WAX Gaming",
+    "market_image": "/logo-remixworlds2.png"
 }
