--- a/src/config.json
+++ b/src/config.json
@@ -4,10 +4,11 @@
     "market_name": "remixworlds1",
     "market_url": "https://wax.remixworlds.com",
     "default_collection": "freecitygame",
-    "api_endpoint": "https://api.hivebp.io",
+    "api_endpoint": "https://api2.hivebp.io",
     "limit": 99,
     "drops_contract": "neftyblocksd",
     "packs_contracts": ["atomicpacksx", "neftyblocksp"],
+    "blend_contracts": ["blenderizerx"],
     "telegram_link": "https://t.me/remixworlds",
     "discord_link": "",
     "twitter_link": "",
