--- a/src/config.json
+++ b/src/config.json
@@ -4,7 +4,7 @@
     "market_name": "remixworlds1",
     "market_url": "https://wax.remixworlds.com",
     "default_collection": "freecitygame",
-    "api_endpoint": "http://wax.cryptolions.io",
+    "api_endpoint": "http://wax.eosrio.io",
     "limit": 50,
     "drops_contract": "neftyblocksd",
     "packs_contracts": ["atomicpacksx", "neftyblocksp"],
